chore: refresh syncpack update config file and versions (#477)
* chore: fix ntds; missing defs in index.ts for some reason.

* chore: node 22 for @accelint/docs

* chore: linting that seemed to have been missed by other MRs

* chore: updated syncpack config file. handles formatting and defines which versions of packages should be synced

* chore: enable the postinstall hook to run package formatting and mismatch fix

* chore: formatting packages only

* chore: first fix after manually changing "@babel/parser": "^7.25.8" in base package.json

* chore: handled all of the ignored packages from .syncpackrc

typescript, react*, jsdom, @types/react*, tailwind*

* chore: @types/node, @types/react*, @vanilla*, esbuild-fix-imports-plugin, zod @types/node

* chore: vitest,

* chore: tsx

* chore: react-querybuilder 8.10.1

* chore: a few patch version lockfile changes

* chore: changeset file

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -8,25 +8,35 @@
   ],
   "semverGroups": [
     {
-      "range": "",
-      "dependencies": ["**"],
-      "packages": ["**"]
-    }
-  ],
-  "versionGroups": [
-    {
-      "label": "Use * for local packages",
       "dependencies": [
-        "@accelint/**"
+        "tsup",
+        "@types/react*",
+        "react",
+        "typescript",
+        "jsdom"
+      ],
+      "packages": [],
+      "range": ""
+    },
+    {
+      "dependencies": [
+        "**"
       ],
       "packages": [
         "**"
       ],
-      "pinVersion": "workspace:*"
+      "range": "^"
     }
   ],
   "sortFirst": [
+    "$schema",
     "name",
+    "title",
+    "description",
+    "author",
+    "owner",
+    "keywords",
+    "subPath",
     "version",
     "private",
     "license",
@@ -40,9 +50,45 @@
     "exports",
     "workspaces",
     "scripts",
-    "overrides",
-    "peerDependencies",
+    "dependencies",
     "devDependencies",
-    "dependencies"
+    "peerDependencies",
+    "optionalDependencies",
+    "overrides"
+  ],
+  "versionGroups": [
+    {
+      "dependencies": [
+        "@accelint/**"
+      ],
+      "label": "Use * for local packages",
+      "packages": [
+        "**"
+      ],
+      "pinVersion": "workspace:*"
+    },
+    {
+      "dependencies": [
+        "typescript"
+      ],
+      "isIgnored": true,
+      "label": "Manually set typescript version based on dependencies"
+    },
+    {
+      "dependencies": [
+        "react*",
+        "jsdom",
+        "@types/react*"
+      ],
+      "isIgnored": true,
+      "label": "Keep react components in sync since this project is using node v18.*"
+    },
+    {
+      "dependencies": [
+        "tailwind*"
+      ],
+      "isIgnored": true,
+      "label": "Tailwind specific"
+    }
   ]
 }
