--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,24 +9,6 @@
     "start": "NODE_ENV=production next start",
     "test": "pnpm vitest --dir=src"
   },
-  "devDependencies": {
-    "@accelint/biome-config": "workspace:*",
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.3.0",
-    "@testing-library/user-event": "14.6.1",
-    "@types/node": "20",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vanilla-extract/next-plugin": "2.4.6",
-    "@vanilla-extract/vite-plugin": "4.0.16",
-    "jsdom": "25.0.1",
-    "typescript": "^5.8.3",
-    "vite": "5.4.9",
-    "vitest": "2.1.3"
-  },
   "dependencies": {
     "@accelint/bus": "workspace:*",
     "@accelint/core": "workspace:*",
@@ -35,15 +17,33 @@
     "@accelint/logger": "workspace:*",
     "@loglayer/plugin-opentelemetry": "^2.1.2",
     "@loglayer/transport-http": "^1.0.3",
-    "@tailwindcss/postcss": "4.1.4",
-    "@vanilla-extract/css": "1.16.0",
-    "@vanilla-extract/dynamic": "2.1.2",
-    "clsx": "2.1.1",
-    "next": "15.0.3",
-    "postcss": "8.4.47",
-    "react": "^19.0.0",
-    "react-aria-components": "1.4.1",
-    "react-dom": "^19.0.0",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/dynamic": "^2.1.2",
+    "clsx": "^2.1.1",
+    "next": "^15.0.3",
+    "postcss": "^8.5.6",
+    "react": "19.0.0",
+    "react-aria-components": "1.12.1",
+    "react-dom": "19.0.0",
     "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "@accelint/biome-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.9.0",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.11",
+    "@vanilla-extract/next-plugin": "^2.4.14",
+    "@vanilla-extract/vite-plugin": "^4.0.20",
+    "jsdom": "25.0.1",
+    "typescript": "5.8.3",
+    "vite": "^5.4.9",
+    "vitest": "^2.1.9"
   }
 }
