--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -1,21 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/design-toolkit",
   "title": "Design Toolkit",
+  "description": "An open-source component library to serve as part of the entire ecosystem of UX for Accelint.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
+  "keywords": [
+    "design-tk",
+    "tooling",
+    "ui"
+  ],
+  "subPath": "design-toolkit/components",
   "version": "6.0.0",
   "private": false,
   "license": "Apache-2.0",
-  "keywords": [
-    "design-tk",
-    "ui",
-    "tooling"
-  ],
-  "description": "An open-source component library to serve as part of the entire ecosystem of UX for Accelint.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
-  "subPath": "design-toolkit/components",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -61,58 +60,28 @@
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm generate && pnpm license && pnpm format && tsup && pnpm build:css",
+    "build-storybook": "pnpm storybook build",
     "build:css": "pnpm tailwindcss -i ./src/index.css -o ./dist/styles.css",
     "constellation-tracker": "constellation-tracker",
     "dev": "pnpm tsc --watch",
+    "format": "pnpm biome format . --write",
     "gen:tokens": "pnpm zx scripts/generate-tokens.mjs",
     "gen:variants": "node scripts/generate-variants.mjs",
     "generate": "pnpm gen:tokens && pnpm gen:variants",
+    "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
+    "license": "pnpm license:tokens && pnpm license:variants",
     "license:tokens": "pnpm zx ../../scripts/license.mjs --files ./src/tokens",
     "license:variants": "pnpm zx ../../scripts/license.mjs --files ./src/variants",
-    "license": "pnpm license:tokens && pnpm license:variants",
-    "temp:token-migration": "pnpm zx scripts/token-migration.mjs",
     "lint": "pnpm biome lint",
-    "format": "pnpm biome format . --write",
-    "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
     "preview": "pnpm storybook dev -p 6006",
     "preview:docs": "pnpm storybook dev --docs -p 6006",
+    "temp:token-migration": "pnpm zx scripts/token-migration.mjs",
     "test": "pnpm vitest --dir=src",
-    "test:watch": "pnpm vitest --dir=src --watch",
-    "build-storybook": "pnpm storybook build"
+    "test:watch": "pnpm vitest --dir=src --watch"
   },
-  "peerDependencies": {
-    "@accelint/bus": "^1.4.0",
-    "@accelint/core": "^0.4.2",
-    "@accelint/icons": "^2.0.4",
-    "@accelint/temporal": "^0.1.1",
-    "@fontsource-variable/roboto-flex": "^5.2.8",
-    "@fontsource-variable/roboto-mono": "^5.2.8",
-    "@internationalized/date": "^3.8.2",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@react-aria/dnd": "^3.10.1",
-    "@react-aria/interactions": "^3.25.3",
-    "@react-aria/overlays": "^3.29.0",
-    "@react-aria/ssr": "^3.9.10",
-    "@react-aria/utils": "^3.30.0",
-    "@react-stately/color": "^3.9.0",
-    "@react-stately/datepicker": "^3.15.0",
-    "@react-stately/utils": "^3.10.8",
-    "@react-types/overlays": "^3.9.0",
-    "@react-types/shared": "^3.31.0",
-    "@tanstack/react-table": "8.21.3",
-    "class-variance-authority": "^0.7.1",
-    "client-only": "^0.0.1",
-    "clsx": "^2.1.1",
-    "radashi": "^12.6.2",
-    "react": "^19.0.0",
-    "react-aria-components": "^1.12.1",
-    "react-dom": "^19.0.0",
-    "react-querybuilder": "^8.8.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.0.1",
-    "tailwindcss": "^4.1.11",
-    "uuid": "^11.1.0",
-    "zod": "^4.0.13"
+  "dependencies": {
+    "@react-stately/data": "^3.13.2",
+    "@tanstack/react-table": "^8.21.3"
   },
   "devDependencies": {
     "@accelint/biome-config": "workspace:*",
@@ -151,47 +120,75 @@
     "@storybook/theming": "^8.6.14",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-table": "8.21.3",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/node": "^24.9.0",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.11",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
-    "esbuild-fix-imports-plugin": "^1.0.21",
-    "jsdom": "^26.1.0",
+    "esbuild-fix-imports-plugin": "^1.0.23",
+    "jsdom": "^25.0.1",
     "postcss": "^8.5.6",
     "radashi": "^12.6.2",
-    "react": "^19.0.0",
-    "react-aria-components": "^1.12.1",
-    "react-dom": "^19.0.0",
-    "react-querybuilder": "^8.8.1",
+    "react": "19.0.0",
+    "react-aria-components": "1.12.1",
+    "react-dom": "19.0.0",
+    "react-querybuilder": "8.10.0",
     "storybook": "^8.6.14",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.0.1",
     "tailwindcss": "^4.1.11",
     "tinyglobby": "^0.2.15",
-    "tsup": "^8.5.0",
+    "tsup": "8.5.0",
     "type-fest": "^4.41.0",
-    "typescript": "^5.8.3",
+    "typescript": "5.8.3",
     "uuid": "^11.1.0",
     "vite": "^5.4.9",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.3",
-    "zod": "^4.0.13"
+    "vitest": "^2.1.9",
+    "zod": "^4.1.12"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
+  "peerDependencies": {
+    "@accelint/bus": "workspace:*",
+    "@accelint/core": "workspace:*",
+    "@accelint/icons": "workspace:*",
+    "@accelint/temporal": "workspace:*",
+    "@fontsource-variable/roboto-flex": "^5.2.8",
+    "@fontsource-variable/roboto-mono": "^5.2.8",
+    "@internationalized/date": "^3.8.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@react-aria/dnd": "^3.10.1",
+    "@react-aria/interactions": "^3.25.3",
+    "@react-aria/overlays": "^3.29.1",
+    "@react-aria/ssr": "^3.9.10",
+    "@react-aria/utils": "^3.30.0",
+    "@react-stately/color": "^3.9.0",
+    "@react-stately/datepicker": "^3.15.0",
+    "@react-stately/utils": "^3.10.8",
+    "@react-types/overlays": "^3.9.0",
+    "@react-types/shared": "^3.31.0",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
+    "clsx": "^2.1.1",
+    "radashi": "^12.6.2",
+    "react": "19.0.0",
+    "react-aria-components": "1.12.1",
+    "react-dom": "19.0.0",
+    "react-querybuilder": "8.10.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.0.1",
+    "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0",
+    "zod": "^4.1.12"
+  },
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@react-stately/data": "3.13.2",
-    "@tanstack/react-table": "8.21.3"
   }
 }
