--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/bus",
   "title": "Accelint Bus",
-  "version": "1.4.0",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "An open-source event bus library.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "An open-source event bus library.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/bus",
+  "version": "1.4.0",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -58,23 +57,21 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.1.9",
-    "esbuild-fix-imports-plugin": "1.0.21",
-    "react": "^19.0.0",
+    "@types/react": "19.1.13",
+    "esbuild-fix-imports-plugin": "^1.0.23",
+    "react": "19.0.0",
     "tsup": "8.5.0",
-    "typescript": "^5.8.3",
-    "vitest": "2.1.3",
-    "vitest-broadcast-channel-mock": "0.1.0"
+    "typescript": "5.8.3",
+    "vitest": "^2.1.9",
+    "vitest-broadcast-channel-mock": "^0.1.0"
   },
   "peerDependencies": {
-    "@accelint/core": "^0.4.2",
-    "typescript": "^5.8.3"
+    "@accelint/core": "workspace:*",
+    "typescript": "5.8.3"
   },
   "optionalDependencies": {
-    "react": "^19.0.0"
+    "react": "19.0.0"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
