--- a/packages/converters/package.json
+++ b/packages/converters/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/converters",
   "title": "Accelint Converters",
-  "version": "0.3.3",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A lightweight JavaScript utility for converting between various value types, including numbers, strings, booleans, dates, and more.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A lightweight JavaScript utility for converting between various value types, including numbers, strings, booleans, dates, and more.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/converters",
+  "version": "0.3.3",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -49,20 +48,18 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
+  "dependencies": {
+    "@accelint/constants": "workspace:*",
+    "typescript": "5.8.3"
+  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "esbuild-fix-imports-plugin": "1.0.21",
+    "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "@accelint/constants": "workspace:*",
-    "typescript": "^5.8.3"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
