--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/core",
   "title": "Accelint Core",
-  "version": "0.4.2",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A set of utility functions for manipulating arrays, objects, logic, and function composition in JavaScript.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A set of utility functions for manipulating arrays, objects, logic, and function composition in JavaScript.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/core",
+  "version": "0.4.2",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -52,22 +51,20 @@
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "esbuild-fix-imports-plugin": "1.0.21",
+    "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
     "type-fest": "^4.41.0",
-    "typescript": "^5.8.3",
+    "typescript": "5.8.3",
     "uuid": "^11.1.0",
-    "vitest": "2.1.3",
-    "zod": "^4.0.15"
+    "vitest": "^2.1.9",
+    "zod": "^4.1.12"
   },
   "peerDependencies": {
     "type-fest": "^4.41.0",
-    "typescript": "^5.8.3",
+    "typescript": "5.8.3",
     "uuid": "^11.1.0",
-    "zod": "^4.0.15"
+    "zod": "^4.1.12"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
