--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/geo",
   "title": "Accelint Geo",
-  "version": "0.2.10",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A collection of JavaScript functions for working with coordinates and geospatial data.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A collection of JavaScript functions for working with coordinates and geospatial data.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/geo",
+  "version": "0.2.10",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -43,23 +42,21 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
+  "dependencies": {
+    "@accelint/math": "workspace:*",
+    "@accelint/predicates": "workspace:*",
+    "@ngageoint/grid-js": "^2.1.0",
+    "@ngageoint/mgrs-js": "^1.0.0",
+    "typescript": "5.8.3"
+  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "esbuild-fix-imports-plugin": "1.0.21",
+    "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "@accelint/math": "workspace:*",
-    "@accelint/predicates": "workspace:*",
-    "@ngageoint/grid-js": "2.1.0",
-    "@ngageoint/mgrs-js": "1.0.0",
-    "typescript": "^5.8.3"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
