--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/logger",
   "title": "Accelint Logger",
-  "version": "0.1.1",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A flexible and extensible logging utility with callsite tracking and environment-aware capabilities.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A flexible and extensible logging utility with callsite tracking and environment-aware capabilities.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/logger",
+  "version": "0.1.1",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -50,6 +49,14 @@
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch"
   },
+  "dependencies": {
+    "@loglayer/plugin": "^2.1.1",
+    "@loglayer/transport": "^2.2.1",
+    "@loglayer/transport-simple-pretty-terminal": "^2.2.1",
+    "callsites": "^4.2.0",
+    "serialize-error": "^12.0.0",
+    "typescript": "5.8.3"
+  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
@@ -57,24 +64,14 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
-    "esbuild-fix-imports-plugin": "1.0.21",
+    "esbuild-fix-imports-plugin": "^1.0.23",
     "loglayer": "^6.6.0",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
   "peerDependencies": {
     "loglayer": "^6.6.0"
   },
-  "dependencies": {
-    "@loglayer/plugin": "^2.1.1",
-    "@loglayer/transport": "^2.2.1",
-    "@loglayer/transport-simple-pretty-terminal": "^2.2.1",
-    "callsites": "^4.2.0",
-    "serialize-error": "^12.0.0",
-    "typescript": "^5.8.3"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
