--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/math",
   "title": "Accelint Math",
-  "version": "0.1.6",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A simple, lightweight JavaScript library that provides a collection of basic mathematical functions.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A simple, lightweight JavaScript library that provides a collection of basic mathematical functions.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/math",
+  "version": "0.1.6",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -50,19 +49,17 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
+  "dependencies": {
+    "typescript": "5.8.3"
+  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "esbuild-fix-imports-plugin": "1.0.21",
+    "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "typescript": "^5.8.3"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
