--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/predicates",
   "title": "Accelint Predicates",
-  "version": "0.4.2",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A collection of useful predicate functions for JavaScript.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A collection of useful predicate functions for JavaScript.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "packages/predicates",
+  "version": "0.4.2",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./dist/**",
@@ -49,22 +48,20 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
+  "dependencies": {
+    "@accelint/core": "workspace:*",
+    "typescript": "5.8.3"
+  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@vitest/web-worker": "2.1.3",
-    "esbuild-fix-imports-plugin": "1.0.21",
-    "fast-check": "4.1.1",
+    "@vitest/web-worker": "^2.1.3",
+    "esbuild-fix-imports-plugin": "^1.0.23",
+    "fast-check": "^4.1.1",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "@accelint/core": "workspace:*",
-    "typescript": "^5.8.3"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
