--- a/tooling/constellation-tracker/package.json
+++ b/tooling/constellation-tracker/package.json
@@ -1,24 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/constellation-tracker",
   "title": "Constellation Tracker",
-  "version": "1.0.0",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A tool used to keep a project's catalog-info.yaml file up to date for use in Constellation.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A tool used to keep a project's catalog-info.yaml file up to date for use in Constellation.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "tooling/constellation-tracker",
+  "version": "1.0.0",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
-  "bin": {
-    "constellation-tracker": "./dist/main.js"
-  },
   "files": [
     "./dist/**",
     "./catalog-info.yaml",
@@ -38,32 +34,33 @@
   "scripts": {
     "build": "pnpm tsc && pnpm license && pnpm format",
     "constellation-tracker": "node ./dist/main.js",
-    "lint": "pnpm biome lint",
     "format": "pnpm biome format . --write",
     "license": "pnpm zx ../../scripts/license.mjs",
+    "lint": "pnpm biome lint",
+    "postinstall": "pnpm run build",
     "test": "pnpm vitest --dir=test",
-    "test:coverage": "pnpm vitest --dir=test --coverage",
-    "postinstall": "pnpm run build"
+    "test:coverage": "pnpm vitest --dir=test --coverage"
+  },
+  "dependencies": {
+    "ansis": "^4.0.0",
+    "commander": "^14.0.0",
+    "globby": "^14.1.0",
+    "ora": "^8.2.0",
+    "radash": "^12.1.1",
+    "true-myth": "^9.0.1",
+    "typescript": "5.8.3",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@types/node": "^20.17.48",
+    "@types/node": "^24.9.0",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "ansis": "4.0.0",
-    "commander": "14.0.0",
-    "globby": "14.1.0",
-    "ora": "8.2.0",
-    "radash": "^12.1.1",
-    "true-myth": "9.0.1",
-    "typescript": "^5.8.3",
-    "yaml": "^2.8.1"
+  "bin": {
+    "constellation-tracker": "./dist/main.js"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
