--- a/tooling/smeegl/package.json
+++ b/tooling/smeegl/package.json
@@ -1,24 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/smeegl",
   "title": "Smeegl",
-  "version": "0.3.2",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "A small, spreet-based spritesheet/texture package for use with Deck.gl.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "A small, spreet-based spritesheet/texture package for use with Deck.gl.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "tooling/smeegl",
+  "version": "0.3.2",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
-  "bin": {
-    "smeegl": "./dist/main.js"
-  },
   "files": [
     "./dist/**",
     "./catalog-info.yaml",
@@ -38,35 +34,36 @@
   "scripts": {
     "build": "pnpm tsc && pnpm license && pnpm format",
     "constellation-tracker": "constellation-tracker",
-    "lint": "pnpm biome lint",
     "format": "pnpm biome format . --write",
     "license": "pnpm zx ../../scripts/license.mjs",
-    "test": "pnpm vitest --dir=test",
-    "postinstall": "pnpm run build"
+    "lint": "pnpm biome lint",
+    "postinstall": "pnpm run build",
+    "test": "pnpm vitest --dir=test"
+  },
+  "dependencies": {
+    "ansis": "^4.0.0",
+    "commander": "^14.0.0",
+    "crc32-universal": "^1.0.1",
+    "esbuild-plugin-file-path-extensions": "^2.1.3",
+    "globby": "^14.1.0",
+    "inquirer": "^12.6.1",
+    "lodash": "^4.17.21",
+    "ora": "^8.2.0",
+    "true-myth": "^9.0.1",
+    "typescript": "5.8.3"
   },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@types/lodash": "4.17.20",
-    "@types/node": "^20.17.48",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.9.0",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "vitest": "^2.1.9"
   },
-  "dependencies": {
-    "ansis": "4.0.0",
-    "commander": "14.0.0",
-    "crc32-universal": "^1.0.1",
-    "esbuild-plugin-file-path-extensions": "2.1.3",
-    "globby": "14.1.0",
-    "inquirer": "12.6.1",
-    "lodash": "^4.17.21",
-    "ora": "8.2.0",
-    "true-myth": "9.0.1",
-    "typescript": "^5.8.3"
+  "bin": {
+    "smeegl": "./dist/main.js"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
