--- a/tooling/typescript-config/package.json
+++ b/tooling/typescript-config/package.json
@@ -1,21 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/typescript-config",
   "title": "TypeScript Configuration",
-  "version": "0.1.3",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "The shared TypeScript configuration used across Accelint projects.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "The shared TypeScript configuration used across Accelint projects.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "type": "module",
-  "owner": "default/pathfinder",
   "subPath": "tooling/typescript-config",
+  "version": "0.1.3",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
+  "type": "module",
   "files": [
     "./tsc/**",
     "./bundler/**",
@@ -48,8 +47,6 @@
     "constellation-tracker": "node ../constellation-tracker/dist/main.js",
     "lint": "pnpm biome lint"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
