--- a/tooling/vitest-config/package.json
+++ b/tooling/vitest-config/package.json
@@ -1,20 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/vitest-config",
   "title": "Vitest Configuration",
-  "version": "0.1.4",
-  "private": false,
-  "license": "Apache-2.0",
+  "description": "The shared Vitest configuration used across Accelint projects.",
+  "author": "https://hypergiant.com",
+  "owner": "default/pathfinder",
   "keywords": [
     "dev-tk",
     "tooling"
   ],
-  "description": "The shared Vitest configuration used across Accelint projects.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gohypergiant/standard-toolkit"
-  },
-  "owner": "default/pathfinder",
   "subPath": "tooling/vitest-config",
+  "version": "0.1.4",
+  "private": false,
+  "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit",
   "type": "module",
   "files": [
     "./catalog-info.yaml",
@@ -33,13 +32,11 @@
     "lint": "pnpm biome lint"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "4.3.2",
-    "@vitest/coverage-istanbul": "2.1.3",
-    "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.1.3"
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-istanbul": "^2.1.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.9"
   },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
   },
