fix: syncpack merge broke the constellation tracker script (#578)
* fix: syncpack merge broke the constellation tracker script

* chore: disabled `formatRepository` to avoid shorthand format

* chore: pnpm run constellation-tracker

* chore: changeset

---------

Co-authored-by: Isaac Kehle <isaac.kehle@hypergiant.com>

--- a/design-toolkit/icons/package.json
+++ b/design-toolkit/icons/package.json
@@ -14,7 +14,10 @@
   "version": "2.0.4",
   "private": false,
   "license": "Apache-2.0",
-  "repository": "gohypergiant/standard-toolkit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gohypergiant/standard-toolkit"
+  },
   "type": "module",
   "files": [
     "./dist/**",
