--- a/packages/map-toolkit/catalog-info.yaml
+++ b/packages/map-toolkit/catalog-info.yaml
@@ -11,9 +11,9 @@ metadata:
 
     Dependencies:
 
-    @accelint/biome-config@1.0.0, @accelint/constellation-tracker@0.0.0,
-    @accelint/design-toolkit@5.0.0, @accelint/typescript-config@0.1.2,
-    @accelint/vitest-config@0.1.3
+    @accelint/biome-config@1.0.0, @accelint/bus@1.2.0,
+    @accelint/constellation-tracker@0.0.0, @accelint/design-toolkit@5.0.0,
+    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/map-toolkit/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
@@ -35,6 +35,7 @@ spec:
   owner: group:default/pathfinder
   dependsOn:
     - component:@accelint/biome-config
+    - component:@accelint/bus
     - component:@accelint/constellation-tracker
     - component:@accelint/design-toolkit
     - component:@accelint/typescript-config
