--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -15,7 +15,10 @@
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
-  "repository": "gohypergiant/standard-toolkit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gohypergiant/standard-toolkit"
+  },
   "type": "module",
   "files": [
     "./dist/**",
