--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -13,7 +13,10 @@
   "version": "0.4.2",
   "private": false,
   "license": "Apache-2.0",
-  "repository": "gohypergiant/standard-toolkit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gohypergiant/standard-toolkit"
+  },
   "type": "module",
   "files": [
     "./dist/**",
