chore: Support node v22 (#577)
* chore: to 22

* fix: corrected issues with some readme files

* chore: removed overrides specific to node 18

* chore: removed hardcoding of "packageManager": "pnpm@10.9.0" which likely broke vercel deploy

* chore: fixing build

* chore: change

* chore: add changeset

---------

Co-authored-by: Cole Hart <cole.hart@hypergiant.com>

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -82,7 +82,7 @@
         "@types/react*"
       ],
       "isIgnored": true,
-      "label": "Keep react components in sync since this project is using node v18.*"
+      "label": "Keep react components in sync manually"
     },
     {
       "dependencies": [
