--- a/package.json
+++ b/package.json
@@ -65,20 +65,11 @@
   },
   "packageManager": "pnpm@10.9.0",
   "pnpm": {
-    "overrides": {
-      "@react-stately/datepicker": "3.13.0",
-      "@internationalized/date": "3.8.0",
-      "undici": "7.12.0"
-    },
     "peerDependencyRules": {
       "allowedVersions": {
         "react": "^19",
-        "react-dom": "^19",
-        "vitest": "2.1.3"
+        "react-dom": "^19"
       }
     }
-  },
-  "pnpmOverridesReasons": {
-    "undici": "https://github.com/nodejs/undici/issues/4374 (No support for Node 18)"
   }
 }
