chore: update optionalDeps to use workspace versions

--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -110,8 +110,8 @@
     "vitest-broadcast-channel-mock": "^0.1.0"
   },
   "optionalDependencies": {
-    "@accelint/bus": "^1.4.0",
-    "@accelint/core": "^0.4.2",
+    "@accelint/bus": "workspace:*",
+    "@accelint/core": "workspace:*",
     "@deck.gl/core": "9.1.14",
     "@deck.gl/extensions": "9.1.14",
     "@deck.gl/geo-layers": "9.1.14",
