Fix/update constellation tracker (#576)
* fix: removes unsupported characaters from catalog-info names

* chore: changeset

* fix: undo changes that shouldn't be here

* fix: update the styleguide filename

* fix: add .windsurf to the ignored folders

--- a/design-toolkit/components/catalog-info.yaml
+++ b/design-toolkit/components/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/design-toolkit"
+  name: accelint_design-toolkit
   title: Design Toolkit
   description: >-
     An open-source component library to serve as part of the entire ecosystem of
@@ -11,17 +11,17 @@ metadata:
 
     Dependencies:
 
-    @accelint/biome-config@1.0.0, @accelint/bus@1.2.0,
-    @accelint/constellation-tracker@0.0.0, @accelint/core@0.4.0,
-    @accelint/icons@2.0.3, @accelint/temporal@0.1.0,
-    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
+    accelint_biome-config@1.0.1, accelint_bus@1.4.0,
+    accelint_constellation-tracker@1.0.0, accelint_core@0.4.2,
+    accelint_icons@2.0.4, accelint_temporal@0.1.1,
+    accelint_typescript-config@0.1.3, accelint_vitest-config@0.1.4
   annotations:
-    backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/design-toolkit/blob/main/design-toolkit/components/catalog-info.yaml
+    backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/design-toolkit/components/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 5.0.0
-    github.com/project-slug: gohypergiant/standard-toolkit/design-toolkit
+    package/version: 6.0.0
+    github.com/project-slug: gohypergiant/standard-toolkit
   links:
-    - url: https://github.com/gohypergiant/standard-toolkit/design-toolkit/tree/main/design-toolkit/components
+    - url: https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components
       title: Documentation
       icon: docs
       type: documentation
@@ -34,11 +34,11 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/biome-config
-    - component:@accelint/bus
-    - component:@accelint/constellation-tracker
-    - component:@accelint/core
-    - component:@accelint/icons
-    - component:@accelint/temporal
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_biome-config
+    - component:accelint_bus
+    - component:accelint_constellation-tracker
+    - component:accelint_core
+    - component:accelint_icons
+    - component:accelint_temporal
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
