--- a/packages/bus/catalog-info.yaml
+++ b/packages/bus/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/bus"
+  name: accelint_bus
   title: Accelint Bus
   description: >-
     An open-source event bus library.
@@ -10,12 +10,12 @@ metadata:
 
     Dependencies:
 
-    @accelint/constellation-tracker@0.0.0, @accelint/core@0.4.0,
-    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
+    accelint_constellation-tracker@1.0.0, accelint_core@0.4.2,
+    accelint_typescript-config@0.1.3, accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/bus/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 1.2.0
+    package/version: 1.4.0
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/packages/bus
@@ -30,7 +30,7 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/constellation-tracker
-    - component:@accelint/core
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_constellation-tracker
+    - component:accelint_core
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
