--- a/packages/converters/catalog-info.yaml
+++ b/packages/converters/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/converters"
+  name: accelint_converters
   title: Accelint Converters
   description: >-
     A lightweight JavaScript utility for converting between various value types,
@@ -11,12 +11,12 @@ metadata:
 
     Dependencies:
 
-    @accelint/constants@0.1.5, @accelint/constellation-tracker@0.0.0,
-    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
+    accelint_constants@0.1.6, accelint_constellation-tracker@1.0.0,
+    accelint_typescript-config@0.1.3, accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/converters/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.3.2
+    package/version: 0.3.3
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/packages/converters
@@ -31,7 +31,7 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/constants
-    - component:@accelint/constellation-tracker
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_constants
+    - component:accelint_constellation-tracker
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
