--- a/packages/geo/catalog-info.yaml
+++ b/packages/geo/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/geo"
+  name: accelint_geo
   title: Accelint Geo
   description: >-
     A collection of JavaScript functions for working with coordinates and
@@ -11,13 +11,13 @@ metadata:
 
     Dependencies:
 
-    @accelint/math@0.1.5, @accelint/predicates@0.4.0,
-    @accelint/constellation-tracker@0.0.0, @accelint/typescript-config@0.1.2,
-    @accelint/vitest-config@0.1.3
+    accelint_math@0.1.6, accelint_predicates@0.4.2,
+    accelint_constellation-tracker@1.0.0, accelint_typescript-config@0.1.3,
+    accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/geo/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.2.8
+    package/version: 0.2.10
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/packages/geo
@@ -32,8 +32,8 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/math
-    - component:@accelint/predicates
-    - component:@accelint/constellation-tracker
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_math
+    - component:accelint_predicates
+    - component:accelint_constellation-tracker
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
