--- a/packages/map-toolkit/catalog-info.yaml
+++ b/packages/map-toolkit/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/map-toolkit"
+  name: accelint_map-toolkit
   title: Accelint Map Toolkit
   description: >-
     A collection of components and utilities to simplify visualizing and working
@@ -11,13 +11,13 @@ metadata:
 
     Dependencies:
 
-    @accelint/biome-config@1.0.0, @accelint/bus@1.2.0,
-    @accelint/constellation-tracker@0.0.0, @accelint/design-toolkit@5.0.0,
-    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
+    accelint_biome-config@1.0.1, accelint_bus@1.4.0,
+    accelint_constellation-tracker@1.0.0, accelint_design-toolkit@6.0.0,
+    accelint_typescript-config@0.1.3, accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/map-toolkit/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.0.2
+    package/version: 0.1.0
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/packages/map-toolkit
@@ -34,9 +34,9 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/biome-config
-    - component:@accelint/bus
-    - component:@accelint/constellation-tracker
-    - component:@accelint/design-toolkit
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_biome-config
+    - component:accelint_bus
+    - component:accelint_constellation-tracker
+    - component:accelint_design-toolkit
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
