--- a/packages/web-worker/catalog-info.yaml
+++ b/packages/web-worker/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/worker"
+  name: accelint_worker
   title: Accelint Worker
   description: >-
     A lightweight JavaScript library that simplifies working with Web Workers.
@@ -10,12 +10,12 @@ metadata:
 
     Dependencies:
 
-    @accelint/constellation-tracker@0.0.0, @accelint/typescript-config@0.1.2,
-    @accelint/vitest-config@0.1.3
+    accelint_constellation-tracker@1.0.0, accelint_typescript-config@0.1.3,
+    accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/packages/web-worker/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.1.3
+    package/version: 0.1.4
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/packages/web-worker
@@ -30,6 +30,6 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/constellation-tracker
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_constellation-tracker
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
