--- a/tooling/constellation-tracker/catalog-info.yaml
+++ b/tooling/constellation-tracker/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/constellation-tracker"
+  name: accelint_constellation-tracker
   title: Constellation Tracker
   description: >-
     A tool used to keep a project's catalog-info.yaml file up to date for use in
@@ -11,11 +11,11 @@ metadata:
 
     Dependencies:
 
-    @accelint/typescript-config@0.1.2, @accelint/vitest-config@0.1.3
+    accelint_typescript-config@0.1.3, accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/tooling/constellation-tracker/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.0.0
+    package/version: 1.0.0
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/tooling/constellation-tracker
@@ -30,5 +30,5 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
