--- a/tooling/eslint-config/catalog-info.yaml
+++ b/tooling/eslint-config/catalog-info.yaml
@@ -2,13 +2,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/eslint-config"
+  name: accelint_eslint-config
   title: Eslint Configuration
   description: The shared eslint configuration used across Accelint projects.
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/tooling/eslint-config/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.1.2
+    package/version: 0.1.3
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/tooling/eslint-config
