--- a/tooling/smeegl/catalog-info.yaml
+++ b/tooling/smeegl/catalog-info.yaml
@@ -2,7 +2,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "@accelint/smeegl"
+  name: accelint_smeegl
   title: Smeegl
   description: >-
     A small, spreet-based spritesheet/texture package for use with Deck.gl.
@@ -10,12 +10,12 @@ metadata:
 
     Dependencies:
 
-    @accelint/constellation-tracker@0.0.0, @accelint/typescript-config@0.1.2,
-    @accelint/vitest-config@0.1.3
+    accelint_constellation-tracker@1.0.0, accelint_typescript-config@0.1.3,
+    accelint_vitest-config@0.1.4
   annotations:
     backstage.io/edit-url: https://github.com/gohypergiant/standard-toolkit/blob/main/tooling/smeegl/catalog-info.yaml
     backstage.io/techdocs-ref: dir:.
-    package/version: 0.3.1
+    package/version: 0.3.2
     github.com/project-slug: gohypergiant/standard-toolkit
   links:
     - url: https://github.com/gohypergiant/standard-toolkit/tree/main/tooling/smeegl
@@ -30,6 +30,6 @@ spec:
   lifecycle: production
   owner: group:default/pathfinder
   dependsOn:
-    - component:@accelint/constellation-tracker
-    - component:@accelint/typescript-config
-    - component:@accelint/vitest-config
+    - component:accelint_constellation-tracker
+    - component:accelint_typescript-config
+    - component:accelint_vitest-config
