--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -43,13 +43,12 @@
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/geo",
     "lint": "pnpm biome lint",
-    "test": "pnpm vitest --dir=src"
+    "test": "pnpm vitest --dir=src",
+    "test:browser": "pnpm build && node browser-testing/index.mjs"
   },
   "dependencies": {
-    "@accelint/math": "workspace:*",
-    "@accelint/predicates": "workspace:*",
-    "@ngageoint/grid-js": "^2.1.0",
-    "@ngageoint/mgrs-js": "^1.0.0",
+    "@types/geodesy": "^2.2.8",
+    "geodesy": "^2.4.0",
     "typescript": "5.8.3"
   },
   "devDependencies": {
@@ -57,6 +56,7 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "esbuild-fix-imports-plugin": "^1.0.23",
+    "playwright": "^1.56.1",
     "tsup": "8.5.0",
     "vitest": "^2.1.9"
   },
