--- a/packages/converters/package.json
+++ b/packages/converters/package.json
@@ -52,8 +52,7 @@
     "test": "pnpm vitest --dir=src"
   },
   "dependencies": {
-    "@accelint/constants": "workspace:*",
-    "typescript": "5.8.3"
+    "@accelint/constants": "workspace:*"
   },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
@@ -61,6 +60,7 @@
     "@accelint/vitest-config": "workspace:*",
     "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
+    "typescript": "5.8.3",
     "vitest": "^2.1.9"
   },
   "publishConfig": {
