--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -51,15 +51,13 @@
     "index": "pnpm zx ../../scripts/indexer.mjs packages/formatters",
     "lint": "pnpm biome lint"
   },
-  "dependencies": {
-    "typescript": "5.8.3"
-  },
   "devDependencies": {
     "@accelint/constellation-tracker": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "esbuild-fix-imports-plugin": "^1.0.23",
     "tsup": "8.5.0",
+    "typescript": "5.8.3",
     "vitest": "^2.1.9"
   },
   "publishConfig": {
