fix: change workspace references

--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -106,7 +106,7 @@
     "vitest-broadcast-channel-mock": "^0.1.0"
   },
   "optionalDependencies": {
-    "@accelint/bus": "workspace:*",
+    "@accelint/bus": "1.4.0",
     "@deck.gl/core": "9.1.14",
     "@deck.gl/extensions": "9.1.14",
     "@deck.gl/geo-layers": "9.1.14",
