--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -69,7 +69,7 @@
     "vitest-broadcast-channel-mock": "^0.1.0"
   },
   "peerDependencies": {
-    "@accelint/core": "workspace:*",
+    "@accelint/bus": "1.4.0",
     "typescript": "5.8.3"
   },
   "optionalDependencies": {
