fix: ensure syncpack doesn't change peerdeps

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -62,6 +62,9 @@
       "dependencies": [
         "@accelint/**"
       ],
+      "dependencyTypes": [
+        "!peer"
+      ],
       "label": "Use * for local packages",
       "packages": [
         "**"
